--- a/src/components/Select/Select.module.css
+++ b/src/components/Select/Select.module.css
@@ -1,4 +1,18 @@
-.selectTitle {
-    font-size: 14px;
-    background-color: #1ea7fd;
+.select span.main {
+    border: 1px solid black;
+    display: inline-block;
+    min-height: 20px;
+    min-width: 40px;
 }
+
+.items {
+    position: absolute;
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.item.selected {
+    background-color: blue;
+    color:white;
+}
+
